# nu-segregation

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  test.ipynb
src/nu_segregation/: __init__.py  constants.py  definitions.py  ipf.py
src/nu_segregation/defs/: partitions.py  resources.py
src/nu_segregation/defs/assets/: census.py  income.py  ipf.py  prod.py  seg.py  survey.py
