[project]
name = "nu-segregation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RodolfoFigueroa", email = "4rodolfofigueroa2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.20",
    "dagster-components",
    "dagster-dg-cli>=1.12.20",
    "dagster-webserver>=1.12.20",
    "geopandas>=1.1.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
]

[project.scripts]
nu-segregation = "nu_segregation:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel<7",
    "mypy>=1.19.1",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "nu_segregation"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "PLR2004", "PD013"]

[tool.uv.sources]
dagster-components = { git = "https://github.com/RodolfoFigueroa/dagster-components" }
